minio/05-minio-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
    type: statefulset
spec:
  serviceName: "minio"
  replicas: 1
  selector:
    matchLabels:
      app: minio
      type: pod
  template:
    metadata:
      labels:
        app: minio
        type: pod
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        command: ["minio"]
        args: ["server", "/data"]
        ports:
        - containerPort: 9000
        volumeMounts:
          - mountPath: /data
            name: data     
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
