minio/06-minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
spec:
  tls:
  - hosts:
      - "minio.domain.tld"
    secretName: "minio-tls"
  rules:
  - host: "minio.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "minio"
            port:
              number: 9000
